tests/compile_errors/bad-fun-signature.buzz
// Expected type definition
fun bad() > {
    return 0;
}
